# pgsqlite

./: .gitignore  README.md  install_pypi.sh  pyproject.toml
pgsqlite/: __main__.py  pgsqlite.py
